--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -6,7 +6,7 @@ aside{
 }
 
 .gradiante {
-    background-image: linear-gradient(to top, #801e1e 2%, #000000);
+    background-image: linear-gradient(to top, #801e1e 2%, #080808);
     height: 100%; /* Establece la altura al 50% del viewport height */
     width: 100%; /* Establece el ancho al 80% del viewport width */
     position:fixed;
@@ -31,7 +31,7 @@ aside{
  }
 /* Navigation Title */
  .Nav-titulo {
-    background-color: #000000; /* Set background color */
+    background-color: #080808; /* Set background color */
      display: flex; /* Use flexbox for layout */
      justify-content: center; /* Center horizontally */
      align-items: center; /* Center vertically */
@@ -209,7 +209,7 @@ ul.dropdown-menu li a {
     left: 20%;
     transform: translateX(-50%) translateY(-50%);
     z-index: 90;
-    top: 60%; /* Centra verticalmente */
+    top: 55%; /* Centra verticalmente */
 }
 
 /* Styles for Path List Buttons */
@@ -256,14 +256,15 @@ ul.dropdown-menu li a {
   margin-left: -29px;
   z-index: 0;
   position: relative;
-  top:3.3%;
+  top:40%;
   -webkit-transform: rotate(30deg);
   -moz-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
   -o-transform: rotate(30deg);
   transform: rotate(30deg); }
   .hexagon-item:first-child {
-    margin-left: 0; }
+    margin-left: 0;
+  }
   .hexagon-item:hover {
     z-index: 1; }
     .hexagon-item:hover .hex-item:last-child {
@@ -272,20 +273,22 @@ ul.dropdown-menu li a {
       -moz-transform: scale(1.3);
       -ms-transform: scale(1.3);
       -o-transform: scale(1.3);
-      transform: scale(1.3); }
+      transform: scale(1.3); 
+    }
     .hexagon-item:hover .hex-item:first-child {
       opacity: 1;
-      -webkit-transform: scale(1.2);
-      -moz-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      -o-transform: scale(1.2);
-      transform: scale(1.2); }
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transform: scale(1.1); 
+    }
       .hexagon-item:hover .hex-item:first-child div:before,
       .hexagon-item:hover .hex-item:first-child div:after {
         height: 5px; }
     .hexagon-item:hover .hex-item div::before,
     .hexagon-item:hover .hex-item div::after {
-      background-color: #ff0037; }
+      background-color: #c73b3b; }
     .hexagon-item:hover .hex-content svg {
       -webkit-transform: scale(0.97);
       -moz-transform: scale(0.97);
@@ -327,7 +330,7 @@ ul.dropdown-menu li a {
     -o-transform-origin: center center;
     transform-origin: center center; }
     .hex-item div::before, .hex-item div::after {
-      background-color: #1e2530;
+      background-color: #080808;
       content: "";
       position: absolute;
       width: 100%;
@@ -386,7 +389,7 @@ ul.dropdown-menu li a {
     margin-bottom: 11px; }
   .hex-content .title {
     display: block;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Nova Cut", system-ui;
     font-size: 14px;
     letter-spacing: 1px;
     line-height: 24px;
@@ -401,6 +404,9 @@ ul.dropdown-menu li a {
     -moz-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
     -o-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
     transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s; }
+    .hex-content svg path {
+      fill: rgb(8, 8, 8); /* Cambiar a tu color deseado */
+    }
   .hex-content:hover {
     color: #fff; }
 
