--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -203,8 +203,8 @@ ul.dropdown-menu li a {
 
 /* Map Styles*/
 #map {
-    width: 600px;
-    height: 600px;
+    width: 25vw;
+    height: calc(40vw * 9 / 16);
     position: absolute;
     left: 20%;
     transform: translateX(-50%) translateY(-50%);
@@ -216,10 +216,10 @@ ul.dropdown-menu li a {
 
 #pathList {
     list-style-type: none;
-    height: 25%; /* Establece la altura al 50% del viewport height */
-    width: 100%; /* Establece el ancho al 80% del viewport width */
+    height: 30vh; /* Establece la altura al 25% del viewport height */
+    width: 90vw; /* Establece el ancho al 80% del viewport width */
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     position: relative; /* Cambiado a relativo para que el z-index funcione */
     display: flex;
     flex-direction: row;
@@ -231,8 +231,9 @@ ul.dropdown-menu li a {
 
 
 #pathList li {
-    margin-left: 80px; /* Set margin between hexagons */
-    height: 80px;
+    margin-left: 5vw; /* Set margin between hexagons */
+    height: calc(25vh / 2);
+    flex: 1;
 }
 
 
@@ -250,13 +251,13 @@ ul.dropdown-menu li a {
 /* Importante*/
 .hexagon-item {
   cursor: pointer;
-  width: 200px;
-  height: 173.20508px;
+  width: calc(100% - 10px);
+  height: 100%;
   float: left;
   margin-left: -29px;
   z-index: 0;
   position: relative;
-  top:40%;
+  top:30%;
   -webkit-transform: rotate(30deg);
   -moz-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
@@ -303,7 +304,7 @@ ul.dropdown-menu li a {
   top: 0;
   left: 50px;
   width: 100px;
-  height: 173.20508px; }
+  height: 100%; }
   .hex-item:first-child {
     z-index: 0;
     -webkit-transform: scale(0.9);
@@ -323,7 +324,7 @@ ul.dropdown-menu li a {
     position: absolute;
     top: 0;
     width: 100px;
-    height: 173.20508px;
+    height: 88%;
     -webkit-transform-origin: center center;
     -moz-transform-origin: center center;
     -ms-transform-origin: center center;
@@ -456,3 +457,10 @@ ul.dropdown-menu li a {
   }
 }
 
+@media screen and (max-aspect-ratio: 16/9) {
+  /* Estilos específicos para pantallas más anchas */
+}
+
+@media screen and (min-aspect-ratio: 16/9) {
+  /* Estilos específicos para pantallas más estrechas */
+}
