--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -203,37 +203,36 @@ ul.dropdown-menu li a {
 
 /* Map Styles*/
 #map {
-  width: 25vw;
-  height: calc(40vw * 9 / 16);
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  z-index: 90;
-  top: 55%; /* Centra verticalmente */
+    width: 25vw;
+    height: calc(40vw * 9/16);  
+    position: absolute;
+    left: 5%;
+    z-index: 90;
+    top: 30%; /* Centra verticalmente */
 }
 
 /* Styles for Path List Buttons */
 
 #pathList {
-  list-style-type: none;
-  height: 30vh; /* Establece la altura al 25% del viewport height */
-  width: 90vw; /* Establece el ancho al 80% del viewport width */
-  padding: 0;
-  margin: 0 auto;
-  position: relative; /* Cambiado a relativo para que el z-index funcione */
-  display: flex;
-  flex-direction: row;
-  background-color: rgba(255, 255, 255, 0);
-  border-radius: 10px;
-  overflow: hidden;
-  z-index: 9999 !important; /* Selecciona un valor alto para asegurarte de que esté encima de todo */
+    list-style-type: none;
+    height: 30vh; /* Establece la altura al 25% del viewport height */
+    width: 90vw; /* Establece el ancho al 80% del viewport width */
+    padding: 0;
+    margin: 0 auto;
+    position: relative; /* Cambiado a relativo para que el z-index funcione */
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 9999 !important; /* Selecciona un valor alto para asegurarte de que esté encima de todo */
 }
 
 
 #pathList li {
-  margin-left: 5vw; /* Set margin between hexagons */
-  height: calc(25vh / 2);
-  flex: 1;
+    margin-left: 5vw; /* Set margin between hexagons */
+    height: calc(25vh/2);
+    flex:1;
 }
 
 
@@ -250,118 +249,118 @@ ul.dropdown-menu li a {
 
 /* Importante*/
 .hexagon-item {
-cursor: pointer;
-width: calc(100% - 10px);
-height: 100%;
-float: left;
-margin-left: -29px;
-z-index: 0;
-position: relative;
-top:30%;
--webkit-transform: rotate(30deg);
--moz-transform: rotate(30deg);
--ms-transform: rotate(30deg);
--o-transform: rotate(30deg);
-transform: rotate(30deg); }
-.hexagon-item:first-child {
-  margin-left: 0;
-}
-.hexagon-item:hover {
-  z-index: 1; }
-  .hexagon-item:hover .hex-item:last-child {
-    opacity: 1;
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3); 
+  cursor: pointer;
+  width: calc(100%-10px);
+  height: 100%;
+  float: left;
+  margin-left: -29px;
+  z-index: 0;
+  position: relative;
+  top:30%;
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+  transform: rotate(30deg); }
+  .hexagon-item:first-child {
+    margin-left: 0;
   }
-  .hexagon-item:hover .hex-item:first-child {
-    opacity: 1;
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1); 
-  }
-    .hexagon-item:hover .hex-item:first-child div:before,
-    .hexagon-item:hover .hex-item:first-child div:after {
-      height: 5px; }
-  .hexagon-item:hover .hex-item div::before,
-  .hexagon-item:hover .hex-item div::after {
-    background-color: #c73b3b; }
-  .hexagon-item:hover .hex-content svg {
-    -webkit-transform: scale(0.97);
-    -moz-transform: scale(0.97);
-    -ms-transform: scale(0.97);
-    -o-transform: scale(0.97);
-    transform: scale(0.97); }
+  .hexagon-item:hover {
+    z-index: 1; }
+    .hexagon-item:hover .hex-item:last-child {
+      opacity: 1;
+      -webkit-transform: scale(1.3);
+      -moz-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+      -o-transform: scale(1.3);
+      transform: scale(1.3); 
+    }
+    .hexagon-item:hover .hex-item:first-child {
+      opacity: 1;
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transform: scale(1.1); 
+    }
+      .hexagon-item:hover .hex-item:first-child div:before,
+      .hexagon-item:hover .hex-item:first-child div:after {
+        height: 5px; }
+    .hexagon-item:hover .hex-item div::before,
+    .hexagon-item:hover .hex-item div::after {
+      background-color: #c73b3b; }
+    .hexagon-item:hover .hex-content svg {
+      -webkit-transform: scale(0.97);
+      -moz-transform: scale(0.97);
+      -ms-transform: scale(0.97);
+      -o-transform: scale(0.97);
+      transform: scale(0.97); }
 
 
 /* Anillos de los hexa*/
 .hex-item {
-position: absolute;
-top: 0;
-left: 50px;
-width: 100px;
-height: 100%; }
-.hex-item:first-child {
-  z-index: 0;
-  -webkit-transform: scale(0.9);
-  -moz-transform: scale(0.9);
-  -ms-transform: scale(0.9);
-  -o-transform: scale(0.9);
-  transform: scale(0.9);
-  -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -moz-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -o-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1); }
-.hex-item:last-child {
-  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-  z-index: 1; }
-.hex-item div {
-  box-sizing: border-box;
   position: absolute;
   top: 0;
+  left: 50px;
   width: 100px;
-  height: 88%;
-  -webkit-transform-origin: center center;
-  -moz-transform-origin: center center;
-  -ms-transform-origin: center center;
-  -o-transform-origin: center center;
-  transform-origin: center center; }
-  .hex-item div::before, .hex-item div::after {
-    background-color: #080808;
-    content: "";
+  height: 100%; }
+  .hex-item:first-child {
+    z-index: 0;
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transform: scale(0.9);
+    -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -moz-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -o-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1); }
+  .hex-item:last-child {
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    z-index: 1; }
+  .hex-item div {
+    box-sizing: border-box;
     position: absolute;
-    width: 100%;
-    height: 3px;
-    -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
-    -moz-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
-    -o-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
-    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s; }
-  .hex-item div:before {
-    top: 0; }
-  .hex-item div:after {
-    bottom: 0; }
-  .hex-item div:nth-child(1) {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  .hex-item div:nth-child(2) {
-    -webkit-transform: rotate(60deg);
-    -moz-transform: rotate(60deg);
-    -ms-transform: rotate(60deg);
-    -o-transform: rotate(60deg);
-    transform: rotate(60deg); }
-  .hex-item div:nth-child(3) {
-    -webkit-transform: rotate(120deg);
-    -moz-transform: rotate(120deg);
-    -ms-transform: rotate(120deg);
-    -o-transform: rotate(120deg);
-    transform: rotate(120deg); }
+    top: 0;
+    width: 100px;
+    height: 88%;
+    -webkit-transform-origin: center center;
+    -moz-transform-origin: center center;
+    -ms-transform-origin: center center;
+    -o-transform-origin: center center;
+    transform-origin: center center; }
+    .hex-item div::before, .hex-item div::after {
+      background-color: #080808;
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 3px;
+      -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
+      -moz-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
+      -o-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
+      transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) 0s; }
+    .hex-item div:before {
+      top: 0; }
+    .hex-item div:after {
+      bottom: 0; }
+    .hex-item div:nth-child(1) {
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg); }
+    .hex-item div:nth-child(2) {
+      -webkit-transform: rotate(60deg);
+      -moz-transform: rotate(60deg);
+      -ms-transform: rotate(60deg);
+      -o-transform: rotate(60deg);
+      transform: rotate(60deg); }
+    .hex-item div:nth-child(3) {
+      -webkit-transform: rotate(120deg);
+      -moz-transform: rotate(120deg);
+      -ms-transform: rotate(120deg);
+      -o-transform: rotate(120deg);
+      transform: rotate(120deg); }
 
     /*Contenido de los hexa*/
 .hex-content {
@@ -457,10 +456,124 @@ transition:0.6s;
 }
 }
 
-@media screen and (max-aspect-ratio: 16/9) {
-/* Estilos específicos para pantallas más anchas */
+/*Rectángulo con información*/
+.rectangle {
+  background-color: white;
+  border-radius: 10px; /* Adjust the value to change the roundness */
+  padding: 20px; /* Add padding to give space for text */
+  width: 25vw;
+  height: calc(40vw * 9/16);
+  position: fixed; /* Position it relative to the viewport */
+  right: 10%;
+  z-index: 90;
+  top: 45%; /* Centra verticalmente */
+  display: flex; /* Use flexbox */
+  flex-direction: column; /* Arrange children vertically */
+  justify-content: center; /* Center content vertically */
+  align-items: center; /* Center content horizontally */
 }
 
-@media screen and (min-aspect-ratio: 16/9) {
-/* Estilos específicos para pantallas más estrechas */
+.recttitle {
+  font-weight: bold; /* Make the title bold */
+  margin-bottom: 10px; /* Add space between title and content */
+  font-size: 2vw; /* Adjust font size based on viewport width */
+}
+
+.rectcontent {
+  color: #080808; /*Color del texto*/
+  font-size: 1.5vw; /* Adjust font size based on viewport width */
+}
+
+/*------------------------------------------------
+   Slides para las fotos (adaptado del código de Cam)
+-------------------------------------------------*/
+
+.slide-slider {
+  width: 25vw; 
+  height: calc(40vw * 9/16); 
+  position: fixed; /* Position it relative to the viewport */
+  overflow: hidden;
+  right: 40%; /* Adjust to position it to the left */
+  z-index: 90; /* Ensure it's above other content */
+  top: 45%; /* Center vertically */
+}
+
+/* Slider list styles */
+.slide-slider .slide-list {
+  position: absolute; /* Position list absolutely within slider */
+  width: max-content; /* Ensure list fits its content */
+  height: 100%; /* Occupy full height of slider */
+  left: 0; /* Align list to the left edge of the slider */
+  top: 0; /* Align list to the top edge of the slider */
+  display: flex; /* Use flexbox for image items */
+  transition: 1s; /* Apply smooth transition */
+}
+
+/* Slider image styles */
+.slide-slider .slide-list img {
+  width: 25vw; 
+  height: calc(40vw * 9/16); 
+  max-width: 100vw;
+  object-fit: cover; /* Ensure images cover their containers */
+}
+
+/* Slider buttons styles */
+.slide-slider .slide-buttons {
+  position: absolute; /* Position buttons absolutely within slider */
+  top: 45%; /* Align buttons vertically */
+  left: 5%; /* Adjust buttons position from left */
+  width: 90%; /* Occupy 90% width of slider */
+  display: flex; /* Use flexbox */
+  justify-content: space-between; /* Separate buttons */
+}
+
+/* Individual button styles */
+.slide-slider .slide-buttons button {
+  width: 2.5vw; /* Set button width */
+  height: 2.5vw; /* Set button height */
+  border-radius: 50%; /* Make button circular */
+  background-color: #fff5; /* Button background color */
+  color: #fff; /* Button text color */
+  border: none; /* Remove button border */
+  font-family: monospace; /* Set font family */
+  font-weight: bold; /* Set font weight */
+}
+
+/* Slider dots styles */
+.slide-slider .slide-dots {
+  position: absolute; /* Position dots absolutely within slider */
+  bottom: 10px; /* Adjust dots position from bottom */
+  left: 0; /* Align dots to the left edge of the slider */
+  color: #fff; /* Dot color */
+  width: 100%; /* Occupy full width of slider */
+  margin: 0; /* Remove margin */
+  padding: 0; /* Remove padding */
+  display: flex; /* Use flexbox */
+  justify-content: center; /* Center dots horizontally */
+}
+
+/* Individual dot styles */
+.slide-slider .slide-dots li {
+  list-style: none; /* Remove default list style */
+  width: 10px; /* Set dot width */
+  height: 10px; /* Set dot height */
+  background-color: #fff; /* Dot background color */
+  margin: 10px; /* Add space between dots */
+  border-radius: 20px; /* Make dots circular */
+  transition: 0.5s; /* Apply smooth transition */
+}
+
+/* Active dot style */
+.slide-slider .slide-dots li.active {
+  width: 30px; /* Increase size of active dot */
+}
+
+@media screen and (max-width: 25vw){
+  .slide-slider{
+      height: calc(40vw *9/16);
+  }
+} 
+
+@media screen and (max-aspect-ratio: 16/9){
+
 }
