--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -108,10 +108,6 @@ ul.dropdown-menu li a {
   z-index: 100;
 }
 
-.btn-secondary:hover {
-  background-color: #5c1919;
-}
-
 .Button .btn {
   min-width: 60px;
   min-height: 60px;
@@ -173,12 +169,12 @@ ul.dropdown-menu li a {
 /* Search and Social */
 
 .search-social {
-  margin-top: 0; /* Puedes ajustar esto según sea necesario */
-  width: 15%; /* Ancho del 15% de la ventana gráfica */
-  height: auto; /* Altura automática para que se ajuste al contenido */
-  position: fixed; /* Mantener fijo en la ventana */
+  margin-top: 0%; /* Puedes ajustar esto según sea necesario */
+  width: 15%;
+  height: 10%;
+  position: absolute; /* Cambiado de relative a absolute */
   right: 5%; /* Ajusta la posición derecha según sea necesario */
-  top: 6%; /* Ajusta la posición superior según sea necesario */
+  top: 9%; /* Ajusta la posición superior según sea necesario */
   transform: translateY(-50%); /* Centra verticalmente el elemento */
 }
 
@@ -193,12 +189,8 @@ ul.dropdown-menu li a {
 
 .social-icons .btn {
   margin: 0.5px; /* Set margin */
-  background-color: transparent; /* Set background color */
+  background-color: transparent; /* Set background color to transparent */
   border: none; /* Remove border */
-  width: 40px; /* Mismo ancho que la imagen */
-  height: 40px; /* Mismo alto que la imagen */
-  display: inline-block; /* Display inline block */
-
 }
 
 .social-icons .btn img {
@@ -213,9 +205,10 @@ ul.dropdown-menu li a {
 #map {
     width: 25vw;
     height: calc(40vw * 9/16);  
-    position: fixed;
+    position: absolute;
     left: 35%;
     z-index: 90;
+    top: 30%; /* Centra verticalmente */
 }
 
 /* Styles for Path List Buttons */
@@ -465,7 +458,7 @@ transition:0.6s;
 
 /*Rectángulo con información*/
 .rectangle {
-  background-color: rgba(73, 7, 7, 0.0);;
+  background-color: white;
   border-radius: 10px; /* Adjust the value to change the roundness */
   padding: 20px; /* Add padding to give space for text */
   width: 25vw;
@@ -473,7 +466,7 @@ transition:0.6s;
   position: fixed; /* Position it relative to the viewport */
   right: 10%;
   z-index: 90;
-  top: 45%; /* Centra verticalmente */
+  top: 43%; /* Centra verticalmente */
   display: flex; /* Use flexbox */
   flex-direction: column; /* Arrange children vertically */
   justify-content: center; /* Center content vertically */
@@ -484,11 +477,10 @@ transition:0.6s;
   font-weight: bold; /* Make the title bold */
   margin-bottom: 10px; /* Add space between title and content */
   font-size: 2vw; /* Adjust font size based on viewport width */
-  color:#f5f3f3;
 }
 
 .rectcontent {
-  color: #f5f3f3; /*Color del texto*/
+  color: #080808; /*Color del texto*/
   font-size: 1.5vw; /* Adjust font size based on viewport width */
 }
 
@@ -503,7 +495,7 @@ transition:0.6s;
   overflow: hidden;
   right: 69%; /* Adjust to position it to the left */
   z-index: 90; /* Ensure it's above other content */
-  top: 50%; /* Center vertically */
+  top: 43%; /* Center vertically */
 }
 
 /* Slider list styles */
@@ -574,15 +566,6 @@ transition:0.6s;
 /* Active dot style */
 .slide-slider .slide-dots li.active {
   width: 30px; /* Increase size of active dot */
-}
-
-/*Centrar los elementos del main dinamicamente*/
-
-.rectangle,
-.slide-slider,
-#map {
-  top: 70%;
-  transform: translateY(-50%);
 }
 
 @media screen and (max-width: 25vw){
