--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -337,7 +337,7 @@ ul.dropdown-menu li a {
     -o-transform-origin: center center;
     transform-origin: center center; }
     .hex-item div::before, .hex-item div::after {
-      background-color: #380c0c;
+      background-color: #080808;
       content: "";
       position: absolute;
       width: 100%;
@@ -396,8 +396,7 @@ width: 156px; }
   margin-bottom: 11px; }
 .hex-content .title {
   display: block;
-  font-family: "Karla", sans-serif;
-  font-optical-sizing: auto;
+  font-family: "Nova Cut", system-ui;
   font-size: 14px;
   letter-spacing: 1px;
   line-height: 24px;
@@ -484,8 +483,6 @@ transition:0.6s;
 .recttitle {
   font-weight: bold; /* Make the title bold */
   margin-bottom: 10px; /* Add space between title and content */
-  font-family: "Karla", sans-serif;
-  font-optical-sizing: auto;
   font-size: 2vw; /* Adjust font size based on viewport width */
   color:#f5f3f3;
 }
@@ -493,8 +490,6 @@ transition:0.6s;
 .rectcontent {
   color: #f5f3f3; /*Color del texto*/
   font-size: 1.5vw; /* Adjust font size based on viewport width */
-  font-family: "Merriweather", serif;
-  text-align: justify;
 }
 
 /*------------------------------------------------
